--- a/CUS Tutorial/CUS Tutorial.vbproj
+++ b/CUS Tutorial/CUS Tutorial.vbproj
@@ -158,6 +158,12 @@
   <ItemGroup>
     <None Include="Resources\if_36_image_584878.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\if_plus_1646001.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Flyer Food And Drink 1200pix 717pix Done.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
