update Control text box

--- a/CUS Tutorial/CUS Tutorial.vbproj
+++ b/CUS Tutorial/CUS Tutorial.vbproj
@@ -116,6 +116,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="M_Public_Variables.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
