--- a/CUS Tutorial/My Project/Settings.settings
+++ b/CUS Tutorial/My Project/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="Conn" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;server=localhost;user id=root;database=vb_custraning;characterset=utf8&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;server=localhost;user id=root;database=vb_training;characterset=utf8&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;MySql.Data.MySqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">server=localhost;user id=root;database=vb_custraning;characterset=utf8</Value>
+      <Value Profile="(Default)">server=localhost;user id=root;database=vb_training;characterset=utf8</Value>
     </Setting>
   </Settings>
 </SettingsFile>
