--- a/CUS Tutorial/My Project/Settings.settings
+++ b/CUS Tutorial/My Project/Settings.settings
@@ -10,5 +10,14 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">server=localhost;user id=root;database=vb_training;characterset=utf8</Value>
     </Setting>
+    <Setting Name="controlLocations" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;string&gt;&amp;lt;?xml version="1.0" encoding="utf-16"?&amp;gt;&lt;/string&gt;
+  &lt;string&gt;&amp;lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&amp;gt;&lt;/string&gt;
+  &lt;string&gt;  &amp;lt;string&amp;gt;0&amp;lt;/string&amp;gt;&lt;/string&gt;
+  &lt;string&gt;&amp;lt;/ArrayOfString&amp;gt;&lt;/string&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
