--- a/CUS Tutorial/CUS Tutorial.vbproj
+++ b/CUS Tutorial/CUS Tutorial.vbproj
@@ -109,6 +109,12 @@
     <Compile Include="frmCapture.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmDrapDropForm.Designer.vb">
+      <DependentUpon>frmDrapDropForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmDrapDropForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmLesson02.Designer.vb">
       <DependentUpon>frmLesson02.vb</DependentUpon>
     </Compile>
@@ -167,6 +173,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmCapture.resx">
       <DependentUpon>frmCapture.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDrapDropForm.resx">
+      <DependentUpon>frmDrapDropForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLesson02.resx">
       <DependentUpon>frmLesson02.vb</DependentUpon>
