--- a/CUS Tutorial/CUS Tutorial.vbproj
+++ b/CUS Tutorial/CUS Tutorial.vbproj
@@ -115,6 +115,12 @@
     <Compile Include="frmDrapDropForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmFunction.Designer.vb">
+      <DependentUpon>frmFunction.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmFunction.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmLesson02.Designer.vb">
       <DependentUpon>frmLesson02.vb</DependentUpon>
     </Compile>
@@ -131,6 +137,12 @@
       <DependentUpon>frmMain.vb</DependentUpon>
     </Compile>
     <Compile Include="frmMain.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMoveFiles.Designer.vb">
+      <DependentUpon>frmMoveFiles.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmMoveFiles.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmUserList.Designer.vb">
@@ -163,6 +175,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="M_Public_Variables.vb" />
+    <Compile Include="Public_Functions.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Camera.resx">
@@ -177,6 +190,9 @@
     <EmbeddedResource Include="frmDrapDropForm.resx">
       <DependentUpon>frmDrapDropForm.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmFunction.resx">
+      <DependentUpon>frmFunction.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLesson02.resx">
       <DependentUpon>frmLesson02.vb</DependentUpon>
     </EmbeddedResource>
@@ -185,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMoveFiles.resx">
+      <DependentUpon>frmMoveFiles.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmUserList.resx">
       <DependentUpon>frmUserList.vb</DependentUpon>
